<resources>
    <string name="app_name">hhrutest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="town_street_house">%1$s, %2$s, %3$s</string>
    <string name="already_applied_card_text">%1$s %2$s уже %3$s</string>
    <string name="now_looking_card_text">%1$s %2$s сейчас %3$s</string>
    <string name="required_experience_text">Требуемый опыт: %1$s</string>
    <string name="resume_for_applying_text">Резюме для отклика</string>
    <string name="resume_applying_vacancy_title">UI/UX дизайнер</string>
    <string name="add_cover_letter_text">Добавить сопроводительное</string>
    <string name="your_cover_letter_hint">Ваше сопроводительное письмо</string>
    <string name="apply_button_text">Откликнуться</string>
    <string name="now_looking_short_card_text">Сейчас просматривает 1 человек</string>
    <string name="short_card_vacancy_title">UI/UX Designer</string>
    <string name="vacancy_short_title">Минск</string>
    <string name="vacancy_short_company">Мобирикс</string>
    <string name="vacancy_short_experience">Опыт от 1 года до 3 лет</string>
    <string name="published_short_vacancy">Опубликовано 20 февраля</string>
    <string name="apply_short_vacancy_button_text">Откликнуться</string>
    <string name="short_vacancy_favorite_button">short_vacancy_favorite_button</string>
    <string name="job_applications_screen_title">Отклики</string>
    <string name="sent_code_text_placeholder">Отправили код на example@mail.ru</string>
    <string name="send_code_description_text">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm_send_code_button_text">Подтвердить</string>
    <string name="search_hint_text">Должность, ключевые слова</string>
    <string name="show_all_vacancies_button_text_placehodler">145 вакансий</string>
    <string name="filter_type_text">По соответствию</string>
    <string name="vacancies_for_you_title_text">Вакансии для вас</string>
    <string name="more_vacancies_button_text">Еще 143 вакансии</string>
    <string name="favorite_title_text">Избранное</string>
    <string name="all_favorite_placeholder_text">1 вакансия</string>
    <string name="start_screen_title_text">Вход в личный кабинет</string>
    <string name="email_or_phone_textfield_hint">Элекронная почта или телефон</string>
    <string name="continue_button_text">Продолжить</string>
    <string name="login_with_password_button_text">Войти с паролем</string>
    <string name="looking_for_employees_title_texxt">Поиск сотрудников</string>
    <string name="looking_for_employees_description_text">Размещение вакансий и доступ к базе резюме</string>
    <string name="looking_for_employees_button_text">Я ищу сотрудников</string>
    <string name="messages_title_text">Сообщения</string>
    <string name="profile_screen_title">Профиль</string>
    <string name="question_button_placeholder_text">Где распологается место работы?</string>
    <string name="offer_button_placeholder_text">Поднять</string>
    <string name="offer_title_placeholder_text">Вакансии рядом с вами</string>
    <string name="all_favorite_vacancies_text">%1$s %2$s</string>
    <string name="more_vacancies_text">Еще %1$s %2$s</string>
    <string name="overall_vacancies_text">%1$s %2$s</string>
    <string name="now_looking_text">Сейчас просматривает %1$s %2$s</string>
    <string name="publshed_on_text">Опубликовано %1$s</string>
    <string name="invalid_login_error_text">Невалидный логин</string>
    <string name="sent_code_to_text">Отправили код на %1$s</string>
</resources>