<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/grey_25"
        android:id="@+id/cv"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/now_looking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:text="@string/now_looking_short_card_text" />

            <TextView
                android:id="@+id/vacancy_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/sfpro_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/short_card_vacancy_title" />

            <TextView
                android:id="@+id/vacancy_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:text="@string/vacancy_short_title" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_short_company"
                android:textColor="@color/white"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                app:drawableEndCompat="@drawable/ic_verified"
                android:drawablePadding="8dp" />
            <TextView
                android:id="@+id/vacancy_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_short_experience"
                android:layout_marginVertical="10dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                app:drawableStartCompat="@drawable/ic_experience" />
            <TextView
                android:id="@+id/published_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_88"
                android:fontFamily="@font/sfpro_regular"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:text="@string/published_short_vacancy"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/employerbutton"
            android:text="@string/apply_short_vacancy_button_text"
            android:textColor="@color/white"
            android:fontFamily="@font/sfpro_regular"
            android:textSize="14sp"
            android:layout_marginTop="21dp"
            android:padding="0dp"
            android:textAllCaps="false"/>
        </LinearLayout>
            <ImageButton
                android:id="@+id/short_favorite_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|top"
                android:clickable="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/short_vacancy_favorite_button" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>