<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hhrutest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hhrutest.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hhrutest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/vacancyFragment"
        android:name="com.example.hhrutest.ui.vacancy.VacancyFragment"
        android:label="VacancyFragment"
        tools:layout="@layout/fragment_vacancy">
        <argument
            android:name="id"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true"/>
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.hhrutest.ui.favorite.FavoriteFragment"
        android:label="FavoriteFragment"
        tools:layout="@layout/fragment_favorite"/>
    <fragment
        android:id="@+id/codeFragment"
        android:name="com.example.hhrutest.ui.login.CodeFragment"
        android:label="CodeFragment"
        tools:layout="@layout/fragment_code"/>
    <fragment
        android:id="@+id/applyFragment"
        android:name="com.example.hhrutest.ApplyFragment"
        android:label="fragment_apply"
        tools:layout="@layout/fragment_apply" />
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.hhrutest.MessageFragment"
        android:label="fragment_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.hhrutest.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>