<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_dashboard"
    android:background="@color/grey_0c"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="48dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/search_bar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:boxBackgroundColor="@color/grey_34"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:fontFamily="@font/sfpro_regular"
                        android:layout_marginVertical="16dp"
                        app:endIconMode="clear_text"
                        app:hintEnabled="false"
                        app:boxStrokeColor="@android:color/transparent"
                        app:errorIconDrawable="@null"
                        app:boxStrokeErrorColor="@color/red"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:paddingVertical="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:inputType="textEmailAddress"
                            android:drawableStart="@drawable/ic_search"
                            android:drawablePadding="8dp"
                            android:hint="@string/search_hint_text"
                            android:textColorHint="@color/grey_9f"
                            android:gravity="center_vertical"

                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:layout_marginTop="15dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_filter"
                        android:background="@drawable/edittext" />
                </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                tools:listitem="@layout/square_card"
                />

                <RelativeLayout
                    android:id="@+id/all_vacancies_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/overall_vacancies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro_regular"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/show_all_vacancies_button_text_placehodler"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_type_text"
                        android:fontFamily="@font/sfpro_regular"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:layout_alignParentEnd="true"
                        android:drawablePadding="6dp"
                        app:drawableEndCompat="@drawable/ic_filter_by" />
                </RelativeLayout>

            <TextView
                android:id="@+id/vacancies_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:paddingBottom="16dp"
                android:paddingTop="32dp"
                android:fontFamily="@font/sfpro_semibold"
                android:text="@string/vacancies_for_you_title_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/card_item"
                android:nestedScrollingEnabled="false" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/show_more_vacancies_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_shape_enabled"
                    android:textAllCaps="false"
                    android:text="@string/more_vacancies_button_text"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



</LinearLayout>